output/unpackaged/unpackaged/objects/Content_Category_Config__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <description>Lightning Design System icon name for this category.</description>
        <label>Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Content Category Config</label>
    <pluralLabel>Content Category Configs</pluralLabel>
</CustomObject>